adding imgs and preventing early color reveal

--- a/styles/image_board.css
+++ b/styles/image_board.css
@@ -19,65 +19,79 @@ h1 {
   text-align: center;
 }
 
-  .row{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  img{
-    width:130px;
-    height:130px;
-    border-radius: 4px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: white;
-    /*position: sticky;
-    z-index: 0;*/
-  }
-  .img_wrapper { 
-    width: 130px;
-    height: 130px;
-    display: inline-block;
-    background: #c6b52d;
-    border-radius: 4px;
-  }
+.row{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .vert_text {
-    writing-mode: vertical-rl;
-    text-orientation: upright;
-    color:white;
+img{
+  width:130px;
+  height:130px;
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+}
 
-    position: absolute;
-    top: 160px;
-    left: 220px;
-  }
+.img_wrapper { 
+  width: 130px;
+  height: 130px;
+  display: inline-block;
+  background: #c6b52d;
+  border-radius: 4px;
+}
 
-  .key_wrap {
-    color:white;
-
-    position: absolute;
-    top: -18px;
-    left: 15px;
-  }
+.key_wrap {
+  margin-top:0px;
+  margin-bottom:5px;
+}
   
-  .t_wrap {
-    color:white;
+.t_wrap {
+  margin-top:0px;
+  margin-bottom:0px;
+}
 
-    position: absolute;
-    top: 10px;
-    left: 15px;
-  }
+.game_info_wrap{
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  padding: 5px 15px;
+  display:block;
+  color:white;
+  border:1px solid white;
+  border-radius: 5px;
+  background-color:#010c1a;
+}
 
-  #key_text{
-    color:#429bf4;
-    text-decoration: underline;
-  }
+#key_text{
+  color:#429bf4;
+  text-decoration: underline;
+}
 
 
-  .hoverable_img:hover {
-    transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  }
+.hoverable_img:hover {
+  transform: scale(2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  z-index: 100;
+  position:relative;
+}
+
+.red_card {
+  background-color: red;
+}
+
+.blue_card {
+  background-color: blue;
+}
+
+.yellow_card {
+  background-color: yellow;
+}
+
+.gray_card {
+  background-color: gray;
+}
 
   /* The Modal (background) */
 .modal {
