--- a/styles/image_board.css
+++ b/styles/image_board.css
@@ -112,10 +112,9 @@ img{
 .modal-content {
   background-color: #b06fa4;
   margin: auto;
-  padding: 20px;
-  width: 60%;
+  padding: 60px 40px;
+  width: 55%;
   border-radius: 6px;
-  height:60%;
   text-align: center;
   /*
   display: flex;
@@ -129,7 +128,7 @@ img{
 
 .modal_title {
   font-size: 39px;
-  margin-top:20%;
+  /*margin-top:20%;*/
 }
 
 .centered{
@@ -144,7 +143,7 @@ img{
 
 .play_again_btn{
   background-color: #429bf4;
-  color: #DDD;
+  color: white;
   border-radius: 4px;
   border:none;
   font-size: 17px;
